--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,11 +7,13 @@
 		"@astrojs/solid-js": "^5.0.4",
 		"@sanity/astro": "^3.1.11",
 		"@sanity/client": "6.27.2",
+		"@tailwindcss/vite": "^4.0.5",
 		"@turf/turf": "^7.2.0",
 		"maplibre-gl": "^5.1.0",
 		"motion": "^12.4.1",
 		"sanity": "3.74.1",
-		"solid-js": "^1.9.4"
+		"solid-js": "^1.9.4",
+		"tailwindcss": "^4.0.5"
 	},
 	"devDependencies": {
 		"@astrojs/check": "^0.9.4",
