--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,7 @@
 		"@sanity/client": "6.27.2",
 		"@tailwindcss/vite": "^4.0.5",
 		"@turf/turf": "^7.2.0",
-		"maplibre-gl": "^5.1.0",
+		"astro-portabletext": "^0.11.1",
 		"motion": "^12.4.1",
 		"sanity": "3.74.1",
 		"solid-js": "^1.9.4",
@@ -18,7 +18,6 @@
 	"devDependencies": {
 		"@astrojs/check": "^0.9.4",
 		"@astrojs/netlify": "6.1.0",
-		"@types/geojson": "^7946.0.16",
 		"@types/svg-sprite": "^0.0.39",
 		"astro": "5.2.5",
 		"browserslist": "^4.24.4",
@@ -26,7 +25,6 @@
 		"csstype": "^3.1.3",
 		"groq": "3.74.1",
 		"lightningcss": "^1.29.1",
-		"mapshaper": "^0.6.102",
 		"svg-sprite": "^2.0.4",
 		"typescript": "^5.7.3"
 	},
