--- a/apps/lib/package.json
+++ b/apps/lib/package.json
@@ -10,7 +10,7 @@
 	"scripts": {
 		"svg": "svgo svgs",
 		"typegen": "bun run svg && bun generate-svg-types.ts svgs -o index.ts && prettier --write index.ts",
-		"update-deps": "ncu -u --format group -i"
+		"update:deps": "ncu -u --format group -i"
 	},
 	"type": "module",
 	"version": "1.0.0"
