--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,27 +5,26 @@
 	],
 	"dependencies": {
 		"@astrojs/solid-js": "^5.0.4",
-		"@sanity/astro": "^3.2.1",
+		"@sanity/astro": "^3.2.5",
 		"@sanity/client": "6.28.0",
-		"@tailwindcss/vite": "^4.0.6",
-		"@turf/turf": "^7.2.0",
+		"@tailwindcss/vite": "^4.0.8",
 		"astro-portabletext": "^0.11.1",
 		"embla-carousel-solid": "^8.5.2",
-		"motion": "^12.4.2",
-		"sanity": "3.75.0",
-		"solid-js": "^1.9.4",
-		"tailwindcss": "^4.0.6"
+		"motion": "^12.4.7",
+		"sanity": "3.77.0",
+		"solid-js": "^1.9.5",
+		"tailwindcss": "^4.0.8"
 	},
 	"devDependencies": {
 		"@astrojs/check": "^0.9.4",
-		"@astrojs/netlify": "6.1.0",
-		"@sanity/types": "^3.75.0",
+		"@astrojs/netlify": "6.2.0",
+		"@sanity/types": "^3.77.0",
 		"@types/svg-sprite": "^0.0.39",
-		"astro": "5.2.6",
+		"astro": "5.3.0",
 		"browserslist": "^4.24.4",
 		"browserslist-to-esbuild": "^2.1.1",
 		"csstype": "^3.1.3",
-		"groq": "3.75.0",
+		"groq": "3.77.0",
 		"lightningcss": "^1.29.1",
 		"svg-sprite": "^2.0.4",
 		"typescript": "^5.7.3"
@@ -38,7 +37,7 @@
 		"check": "astro check",
 		"dev": "astro dev",
 		"preview": "bun run build && astro preview",
-		"update-deps": "ncu -u --format group -i"
+		"update:deps": "ncu -u --format group -i"
 	},
 	"type": "module",
 	"version": "1.0.0"
