--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
 		"@tailwindcss/vite": "^4.0.8",
 		"astro-portabletext": "^0.11.1",
 		"embla-carousel-solid": "^8.5.2",
+		"lenis": "^1.1.21",
 		"motion": "^12.4.7",
 		"sanity": "3.77.0",
 		"solid-js": "^1.9.5",
