--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,26 +6,27 @@
 	"dependencies": {
 		"@astrojs/solid-js": "^5.0.4",
 		"@sanity/astro": "^3.2.5",
-		"@sanity/client": "6.28.0",
-		"@tailwindcss/vite": "^4.0.8",
+		"@sanity/client": "6.28.1",
+		"@tailwindcss/vite": "^4.0.9",
 		"astro-portabletext": "^0.11.1",
+		"colorjs.io": "^0.5.2",
 		"embla-carousel-solid": "^8.5.2",
 		"lenis": "^1.1.21",
 		"motion": "^12.4.7",
-		"sanity": "3.77.0",
+		"sanity": "3.77.2",
 		"solid-js": "^1.9.5",
-		"tailwindcss": "^4.0.8"
+		"tailwindcss": "^4.0.9"
 	},
 	"devDependencies": {
 		"@astrojs/check": "^0.9.4",
-		"@astrojs/netlify": "6.2.0",
-		"@sanity/types": "^3.77.0",
+		"@astrojs/netlify": "6.2.1",
+		"@sanity/types": "^3.77.2",
 		"@types/svg-sprite": "^0.0.39",
-		"astro": "5.3.0",
+		"astro": "5.3.1",
 		"browserslist": "^4.24.4",
 		"browserslist-to-esbuild": "^2.1.1",
 		"csstype": "^3.1.3",
-		"groq": "3.77.0",
+		"groq": "3.77.2",
 		"lightningcss": "^1.29.1",
 		"svg-sprite": "^2.0.4",
 		"typescript": "^5.7.3"
