--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -7,6 +7,7 @@
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"sanity": "3.77.2",
+		"sanity-plugin-mux-input": "^2.5.0",
 		"styled-components": "^6.1.15"
 	},
 	"devDependencies": {
