--- a/apps/studio/tsconfig.json
+++ b/apps/studio/tsconfig.json
@@ -12,6 +12,6 @@
 		"jsx": "preserve",
 		"incremental": true
 	},
-	"include": ["**/*.ts", "**/*.tsx"],
+	"include": ["**/*.ts", "**/*.tsx", "../web/src/scripts/queries.ts"],
 	"exclude": ["node_modules"]
 }
