--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,32 +4,31 @@
 		"> 0.5% in alt-EU, last 2 versions"
 	],
 	"dependencies": {
+		"@astrojs/check": "^0.9.4",
+		"@astrojs/netlify": "6.2.2",
 		"@astrojs/solid-js": "^5.0.5",
 		"@lottielab/lottie-player": "^1.1.3",
 		"@sanity/astro": "^3.2.5",
 		"@sanity/client": "6.28.2",
+		"@sanity/types": "^3.77.2",
 		"@tailwindcss/vite": "^4.0.9",
+		"@types/svg-sprite": "^0.0.39",
+		"astro": "5.4.1",
 		"astro-portabletext": "^0.11.1",
+		"browserslist": "^4.24.4",
+		"browserslist-to-esbuild": "^2.1.1",
 		"colorjs.io": "^0.5.2",
+		"csstype": "^3.1.3",
 		"embla-carousel-solid": "^8.5.2",
+		"groq": "3.77.2",
+		"groqd": "^1.3.0",
 		"lenis": "^1.1.22",
+		"lightningcss": "^1.29.1",
 		"motion": "^12.4.7",
 		"sanity": "3.77.2",
 		"solid-js": "^1.9.5",
-		"tailwindcss": "^4.0.9"
-	},
-	"devDependencies": {
-		"@astrojs/check": "^0.9.4",
-		"@astrojs/netlify": "6.2.2",
-		"@sanity/types": "^3.77.2",
-		"@types/svg-sprite": "^0.0.39",
-		"astro": "5.4.1",
-		"browserslist": "^4.24.4",
-		"browserslist-to-esbuild": "^2.1.1",
-		"csstype": "^3.1.3",
-		"groq": "3.77.2",
-		"lightningcss": "^1.29.1",
 		"svg-sprite": "^2.0.4",
+		"tailwindcss": "^4.0.9",
 		"typescript": "^5.8.2"
 	},
 	"name": "@novo-holdings-annual-report-2024/web",
