--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"devDependencies": {
+	"dependencies": {
 		"@biomejs/biome": "^1.9.4",
 		"@types/bun": "^1.2.4",
 		"npm-check-updates": "^17.1.15",
