--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -1,13 +1,14 @@
 {
 	"dependencies": {
+		"@carbon/icons-react": "^11.56.0",
 		"@sanity/cli": "3.77.2",
-		"@sanity/icons": "^3.7.0",
 		"@sanity/orderable-document-list": "^1.2.3",
 		"@sanity/vision": "3.77.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"sanity": "3.77.2",
 		"sanity-plugin-mux-input": "^2.6.0",
+		"slugify": "^1.6.6",
 		"styled-components": "^6.1.15"
 	},
 	"devDependencies": {
