--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,7 @@
 {
 	"$schema": "https://turbo.build/schema.json",
 	"globalEnv": [],
+	"ui": "tui",
 	"tasks": {
 		"build": {
 			"dependsOn": ["^build"]
@@ -11,13 +12,16 @@
 		"dev": {
 			"cache": false,
 			"env": ["!SANITY_STUDIO_*"],
-			"persistent": true
+			"persistent": true,
+			"interactive": false
 		},
 		"typegen": {
 			"cache": false
 		},
 		"update:deps": {
-			"cache": false
+			"cache": false,
+			"persistent": true,
+			"interactive": true
 		},
 		"deploy": {
 			"cache": false
