--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -1,25 +1,19 @@
 {
 	"dependencies": {
 		"@carbon/icons-react": "^11.56.0",
-		"@sanity/cli": "3.78.0",
-		"@sanity/orderable-document-list": "^1.2.3",
-		"@sanity/vision": "3.78.0",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
-		"sanity": "3.78.0",
-		"sanity-plugin-mux-input": "^2.6.0",
+		"@sanity/cli": "3.78.1",
+		"@sanity/eslint-config-studio": "^5.0.2",
+		"@sanity/vision": "3.78.1",
+		"eslint": "^9.22.0",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"sanity": "3.78.1",
+		"sanity-plugin-media": "^3.0.1",
 		"slugify": "^1.6.6",
-		"styled-components": "^6.1.15"
-	},
-	"devDependencies": {
-		"@sanity/eslint-config-studio": "^5.0.1",
-		"@types/react": "^18.3.12",
-		"eslint": "^9.21.0",
-		"prettier": "^3.5.3",
+		"styled-components": "^6.1.15",
 		"typescript": "^5.8.2"
 	},
 	"exports": {
-		"./queries": "./lib/queries.ts",
 		"./types": "./typegen/sanity.types.ts"
 	},
 	"name": "@novo-holdings-annual-report-2024/studio",
