--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"dependencies": {
 		"@biomejs/biome": "^1.9.4",
 		"@types/bun": "^1.2.5",
+		"astro-seo": "^0.8.4",
 		"npm-check-updates": "^17.1.15",
 		"prettier": "^3.5.3",
 		"prettier-plugin-astro": "^0.14.1",
