--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
 		"@solid-primitives/intersection-observer": "^2.2.0",
 		"@solid-primitives/media": "^2.3.0",
 		"@tailwindcss/vite": "^4.0.15",
+		"@types/minimasonry": "^1.3.5",
 		"@types/svg-sprite": "^0.0.39",
 		"astro": "5.5.3",
 		"astro-portabletext": "^0.11.1",
@@ -26,6 +27,7 @@
 		"groqd": "^1.3.0",
 		"lenis": "^1.2.3",
 		"lightningcss": "^1.29.3",
+		"minimasonry": "^1.3.2",
 		"motion": "^12.5.0",
 		"sanity": "3.80.1",
 		"solid-js": "^1.9.5",
